--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <h2 class="card-title text-black">A Fresh Start for Giving</h2>
       <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
       <div class="card-actions justify-end">
-        <button class="btn btn-secondary text-white "><a href="./src/kidswhocount.html">Learn More</a></button>
+        <button class="btn btn-secondary text-white "><a href="src/kidswhocount.html">Learn More</a></button>
       </div>
     </div>
   </div>
