--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </figure>
     <div class="card-body">
       <h2 class="card-title text-black">A Fresh Start for Giving</h2>
-      <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+      <p>Redesigning Kids Who Count’s website and creating a more engaging and user-friendly experience for families</p>
       <div class="card-actions justify-end">
         <button class="btn btn-secondary text-white "><a href="./src/kidswhocount.html">Learn More</a></button>
       </div>
