added new case study

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
         alt="Shoes" />
     </figure>
     <div class="card-body">
-      <h2 class="card-title text-black">Unlocking the Power of JavaScript</h2>
-      <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+      <h2 class="card-title text-black">Enhancing JavaScript with TypeScript</h2>
+      <p>This project categorizes TypeScript’s types into three main groups: basic types, array types, and special types</p>
       <div class="card-actions justify-end">
-        <button class="btn btn-secondary text-white ">Learn More</button>
+        <button class="btn btn-secondary text-white "><a href="./src/tstypes.html">Learn More</a></button>
       </div>
     </div>
   </div>
