--- a/src/cs_advising.html
+++ b/src/cs_advising.html
@@ -27,7 +27,7 @@
   </div>
   </div>
 
-<div class="max-w-4xl mx-auto py-8 px-6">
+<div class="max-w-4xl mx-auto py-8 px-6 leading-relaxed">
 
   <!--hero img -->
   <!--Title -->
